// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly for List with props list 1`] = `
<ul
  className="list-items undefined "
>
  <li
    className="item"
  >
    item1
  </li>
  <li
    className="item"
  >
    item2
  </li>
</ul>
`;

exports[`renders correctly for List with props list with enzyme 1`] = `
<ul
  className="list-items undefined "
>
  <li
    className="item"
    key="item1"
  >
    item1
  </li>
  <li
    className="item"
    key="item2"
  >
    item2
  </li>
</ul>
`;

exports[`renders correctly for List without props data 1`] = `
<span
  className="empty-message"
>
  No items in list
</span>
`;

exports[`renders correctly for menutools 1`] = `
<a
  class="navicon-button x"
>
  <div
    className="navicon"
  />
</a>
`;
